[gd_scene load_steps=3 format=2]

[ext_resource path="res://map/ChargeSpawner.gd" type="Script" id=1]
[ext_resource path="res://assets/weapons/chargespawner.png" type="Texture" id=2]

[node name="ChargeSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 2 )

[node name="SpawnPos" type="Position2D" parent="."]
position = Vector2( 0, -10 )

[node name="CooldownTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="SpawnedCharges" type="Node" parent="."]

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
